Finalize CSS style

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-html {
+html, body {
     height: 100%;
     margin: 0;
     font-size: 16px;
@@ -25,7 +25,7 @@ h1 {
     text-align: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 786px) {
     h1 {
         font-size: 3em;
     }
